# wit-ports-and-adapters

./: .gitignore  README.md  default.nix  flake.nix  maskfile.md  treefmt.nix
src/: CMakeLists.txt  greeter.cpp
text-analysis/: README.md
text-analysis/python-host/: .gitignore  host.py  pyproject.toml
text-analysis/rust-component/: Cargo.toml
text-analysis/rust-component/src/: bindings.rs  lib.rs
text-analysis/wit/: text-analysis.wit
wit/: greeter.wit
